--- a/JavaScript/[04] JS-POO/ValidarFormulario/index.html
+++ b/JavaScript/[04] JS-POO/ValidarFormulario/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Form</title>
 </head>
 
 <body>
@@ -20,24 +20,28 @@
       <li>Senha precisa conter entre 6 e 12 caracteres</li>
     </ul>
   </section>
-  <form action="/" method="post" class="fomulario">
+  <form action="/" method="post" class="formulario">
       <label>Nome</label>
-      <input type="text" placeholder="insira seu nome" class="input-form nome">
+      <input type="text" placeholder="insira seu nome" class="input-form nome valida">
 
       <label>Sobrenome</label>
-      <input type="text" placeholder="insira seu sobrenome" class="input-form sobrenome">
+      <input type="text" placeholder="insira seu sobrenome" class="input-form sobrenome valida">
 
       <label>CPF</label>
-      <input type="text" placeholder="cpf" class="input-form cpf">
+      <input type="text" placeholder="cpf" class="input-form cpf valida">
+
+      <label>Usuario</label>
+      <input type="text" placeholder="usuario" class="input-form usuario valida">
 
       <label>Senha</label>
-      <input type="password" class="input-form senha">
+      <input type="password" class="input-form senha valida">
       <label>Repita Senha</label>
 
-      <input type="password"  class="input-form repita-senha">
+      <input type="password"  class="input-form repete-senha valida">
       <button type="submit"><=Enviar>= </button>
 
   </form>
+  <script src="validaCPF.js"></script>
   <script src="app.js"></script>
 </body>
 
