--- a/JavaScript/[05] JS-Promises/XMLHttpRequest/index1.html
+++ b/JavaScript/[05] JS-Promises/XMLHttpRequest/index1.html
@@ -7,8 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Index1</h1>
-
-  <script src="./app.js"></script>
+  <h1>index1</h1>
+  <p>Essa é a página 1</p>
 </body>
 </html>
