--- a/JavaScript/[05] JS-Promises/XMLHttpRequest/index3.html
+++ b/JavaScript/[05] JS-Promises/XMLHttpRequest/index3.html
@@ -7,10 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Index3</h1>
-
-  <script src="./app.js"></script>
-
-
+  <h1>index3</h1>
+  <p>Essa é a página 3</p>
 </body>
 </html>
