--- a/JavaScript/[05] JS-Promises/FatchApiAxios/index.html
+++ b/JavaScript/[05] JS-Promises/FatchApiAxios/index.html
@@ -19,7 +19,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column
+    flex-direction: column;
     grid-gap:20px ;
   } 
   table > tr > td{
